# pdf_parser

./: .config.cfg  .gitignore  Untitled.ipynb  pyproject.toml
src/: run_pipe.py  test_model.py
src/configs/: __init__.py  database_conf.py  layout_conf.py  main.py  toimage_conf.py
src/layout_builder/: base.py  hglayout.py
src/pdftoimg/: base.py  pdfinum.py  pdftoimg.py
